# alma

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: upload.py
backend/app/core/: config.py
backend/app/services/: extract.py  form_filler.py
backend/app/static/: index.html
